manifests/k3d/loki.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
