manifests/k3d/victoria-metrics.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
