manifests/k3d/beam.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beam
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beam
  namespace: beam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beam
  template:
    metadata:
      labels:
        app: beam
    spec:
      containers:
      - name: beam
        image: registry.localhost:5000/beam:latest
        command:
        - /workspace/bin/beam
        ports:
        - name: grpc
          containerPort: 1993
          protocol: TCP
        securityContext:
          privileged: true
        volumeMounts:
        - name: images
          mountPath: /images
        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
      - name: images
        persistentVolumeClaim:
          claimName: images
---
apiVersion: v1
kind: Service
metadata:
  name: beam
  namespace: beam
spec:
  selector:
    app: beam
  ports:
  - name: grpc
    port: 1993
    targetPort: 1993
    protocol: TCP
  - name: http
    port: 1994
    targetPort: 1994
    protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: beam
  namespace: beam
spec:
  entryPoints:
  - web
  routes:
  - match: HostSNI(`*`)
    kind: Rule
    services:
    - name: beam
      port: 1993
